syntax = "proto3";

package proto;

message APITokenVerifyRequest {
  string token = 1;
}

message APITokenVerifyResponse {
  bool authorized = 1;
}

service AuthService {
  // Verify API token
  rpc VerifyAPIToken (APITokenVerifyRequest) returns (APITokenVerifyResponse) {}
} 